2019-1/231/users/4206/executions/1769_1577.log
== TEST (2019-05-26 11:51:33) 
-- CODE:
from numpy import *
a = float(input())
b = float(input())
c = int(input())
t = 0
v= arange(c, dtype= int)
v1 = array(zeros(c, dtype = float))
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 11:51:49) 
-- CODE:
from numpy import *
a = float(input())
b = float(input())
c = int(input())
t = 0
v= arange(c, dtype= int)
v1 = array(zeros(c, dtype = float))
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 11:51:50) 
-- CODE:
from numpy import *
a = float(input())
b = float(input())
c = int(input())
t = 0
v= arange(c, dtype= int)
v1 = array(zeros(c, dtype = float))
print(v)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:01:23) 
-- CODE:
from numpy import *
A= float(input())
B= float(input())
C= int(input())
T= 0
V=arange(c, dtype= int)
V1= array(zeros(c, dtype = float)
while(T<C):
			 D = (A*(V[0+T]**2)/2)+B*V[0+T]
			 V1[0+T]= V1[0+T]+D
			 T = T+1
			
			 
			  
-- ERROR:
File "XXXX", line 8
    while(T<C):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:01:52) 
-- CODE:
from numpy import *
A= float(input())
B= float(input())
C= int(input())
T= 0
V=arange(c, dtype= int)
V1= array(zeros(c, dtype = float)
while(t<c):
			 D = (A*(V[0+T]**2)/2)+B*V[0+T]
			 V1[0+T]= V1[0+T]+D
			 T = T+1
			
			 
			  
-- ERROR:
File "XXXX", line 8
    while(t<c):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:02:01) 
-- CODE:
from numpy import *
A= float(input())
B= float(input())
C= int(input())
T= 0
V=arange(c, dtype= int)
V1= array(zeros(c, dtype = float)
while(t<c):
			 D = (A*(V[0+T]**2)/2)+B*V[0+T]
			 V1[0+T]= V1[0+T]+D
			 T = T+1
			
			 
			  
-- ERROR:
File "XXXX", line 8
    while(t<c):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:02:19) 
-- CODE:
from numpy import *
A= float(input())
B= float(input())
C= int(input())
T= 0
V=arange(c, dtype= int)
V1= array(zeros(c, dtype = float)
while(T<C):
			 D = (A*(V[0+T]**2)/2)+B*V[0+T]
			 V1[0+T]= V1[0+T]+D
			 T = T+1
			
			 
			  
-- ERROR:
File "XXXX", line 8
    while(T<C):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:03:00) 
-- CODE:
from numpy import *
A= float(input())
B= float(input())
C= int(input())
T= 0
V=arange(c, dtype= int)
V1= array(zeros(c, dtype = float)
while(T<C) :
			 D = (A*(V[0+T]**2)/2)+B*V[0+T]
			 V1[0+T]= V1[0+T]+D
			 T = T+1
			
			 
			  
-- ERROR:
File "XXXX", line 8
    while(T<C) :
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:03:39) 
-- CODE:
from numpy import *
A= float(input())
B= float(input())
C= int(input())
T= 0
V=arange(c, dtype= int)
V1= array(zeros(c, dtype = float)
while(t<c):
			 
			 D = (A*(V[0+T]**2)/2)+B*V[0+T]
			 V1[0+T]= V1[0+T]+D
			 T = T+1
			
			 
			  
-- ERROR:
File "XXXX", line 8
    while(t<c):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:03:49) 
-- CODE:
from numpy import *
A= float(input())
B= float(input())
C= int(input())
T= 0
V=arange(c, dtype= int)
V1= array(zeros(c, dtype = float)

while(t<c):
			 
			 D = (A*(V[0+T]**2)/2)+B*V[0+T]
			 V1[0+T]= V1[0+T]+D
			 T = T+1
			
			 
			  
-- ERROR:
File "XXXX", line 9
    while(t<c):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:04:03) 
-- CODE:
from numpy import *
A= float(input())
B= float(input())
C= int(input())
T= 0
V=arange(c, dtype= int)
V1= array(zeros(c, dtype = float)

while(t<=c):
			 D = (A*(V[0+T]**2)/2)+B*V[0+T]
			 V1[0+T]= V1[0+T]+D
			 T = T+1
			
			 
			  
-- ERROR:
File "XXXX", line 9
    while(t<=c):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:04:11) 
-- CODE:
from numpy import *
A= float(input())
B= float(input())
C= int(input())
T= 0
V=arange(c, dtype= int)
V1= array(zeros(c, dtype = float)

while
			 D = (A*(V[0+T]**2)/2)+B*V[0+T]
			 V1[0+T]= V1[0+T]+D
			 T = T+1
			
			 
			  
-- ERROR:
File "XXXX", line 9
    while
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:04:17) 
-- CODE:
from numpy import *
A= float(input())
B= float(input())
C= int(input())
T= 0
V=arange(c, dtype= int)
V1= array(zeros(c, dtype = float)

while(t<c):
			 D = (A*(V[0+T]**2)/2)+B*V[0+T]
			 V1[0+T]= V1[0+T]+D
			 T = T+1
			
			 
			  
-- ERROR:
File "XXXX", line 9
    while(t<c):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:04:26) 
-- CODE:
from numpy import *
A= float(input())
B= float(input())
C= int(input())
T= 0
V=arange(c, dtype= int)
V1= array(zeros(c, dtype = float)
while(t<c):
			 D = (A*(V[0+T]**2)/2)+B*V[0+T]
			 V1[0+T]= V1[0+T]+D
			 T = T+1
			
			 
			  
-- ERROR:
File "XXXX", line 8
    while(t<c):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:05:16) 
-- CODE:
from numpy import *
A= float(input())
B= float(input())
C= int(input())
T= 0
V=arange(c, dtype= int)
V1= array(zeros(c, dtype = float)
while(T<C):
			 
-- ERROR:
File "XXXX", line 8
    while(T<C):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:05:24) 
-- CODE:
from numpy import *
A= float(input())
B= float(input())
C= int(input())
T= 0
V=arange(c, dtype= int)
V1= array(zeros(c, dtype = float)
while(T<C):
			 
			 
-- ERROR:
File "XXXX", line 8
    while(T<C):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:05:40) 
-- CODE:
from numpy import *
A= float(input())
B= float(input())
C= int(input())
T= 0
V=arange(c, dtype= int)
V1= array(zeros(c, dtype = float)
while(T<C):
			 D = (A*(V[0+T]**2)/2)+B*V[0+T]
			 V1[0+T]= V1[0+T]+D
			 T = T+1
			 
-- ERROR:
File "XXXX", line 8
    while(T<C):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:06:01) 
-- CODE:
from numpy import *
A= float(input())
B= float(input())
C= int(input())
T= 0
V=arange(c, dtype= int)
V1= array(zeros(c, dtype = float)
while(T<C):
			 D = (A*(V[0+T]**2)/2)+B*V[0+T]
			 V1[0+T]= V1[0+T]+D
			 T = T+1
			 
-- ERROR:
File "XXXX", line 8
    while(T<C):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:06:38) 
-- CODE:
from numpy import *
A= float(input())
B= float(input())
C= int(input())
T= 0
V=arange(c, dtype= int)
V1= array(zeros(c, dtype = float)
while(T!=size(v)):
			 D = (A*(V[0+T]**2)/2)+B*V[0+T]
			 V1[0+T]= V1[0+T]+D
			 T = T+1
			 
-- ERROR:
File "XXXX", line 8
    while(T!=size(v)):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:06:38) 
-- CODE:
from numpy import *
A= float(input())
B= float(input())
C= int(input())
T= 0
V=arange(c, dtype= int)
V1= array(zeros(c, dtype = float)
while(T!=size(v)):
			 D = (A*(V[0+T]**2)/2)+B*V[0+T]
			 V1[0+T]= V1[0+T]+D
			 T = T+1
			 
-- ERROR:
File "XXXX", line 8
    while(T!=size(v)):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:06:38) 
-- CODE:
from numpy import *
A= float(input())
B= float(input())
C= int(input())
T= 0
V=arange(c, dtype= int)
V1= array(zeros(c, dtype = float)
while(T!=size(v)):
			 D = (A*(V[0+T]**2)/2)+B*V[0+T]
			 V1[0+T]= V1[0+T]+D
			 T = T+1
			 
-- ERROR:
File "XXXX", line 8
    while(T!=size(v)):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:06:51) 
-- CODE:
from numpy import *
A= float(input())
B= float(input())
C= int(input())
T= 0
V=arange(c, dtype= int)
V1= array(zeros(c, dtype = float)
while( T!=size(v) ):
			 D = (A*(V[0+T]**2)/2)+B*V[0+T]
			 V1[0+T]= V1[0+T]+D
			 T = T+1
			 
-- ERROR:
File "XXXX", line 8
    while( T!=size(v) ):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:07:41) 
-- CODE:
from numpy import *
A= float(input())
B= float(input())
C= int(input())
T= 0
V=arange(c, dtype= int)
V1= array(zeros(c, dtype = float)
while( T!=size(v) ):
			 D = (A*(V[0+T]**2)/2)+B*V[0+T]
			 V1[0+T]= V1[0+T]+D
			 T = T+1
			 
-- ERROR:
File "XXXX", line 8
    while( T!=size(v) ):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-26 12:08:57) 
-- CODE:
from numpy import *
A= float(input())
B= float(input())
C = int(input())
T = 0
V=arange(c, dtype= int)
V1= array(zeros(c, dtype = float)
while( T!=size(v) ):
			 D = (A*(V[0+T]**2)/2)+B*V[0+T]
			 V1[0+T]= V1[0+T]+D
			 T = T+1
			 
-- ERROR:
File "XXXX", line 8
    while( T!=size(v) ):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-26 12:11:23) 
-- CODE:
from numpy import *
A= float(input())
B= float(input())
C= int(input())
T= 0
V = arange(C)
V1 = array(zeros(C, dtype = float))
while(T<C):
	D = (A*(V[0+T]**2)/2)+B*V[0+T]
	V1[0+T]= V1[0+T]+D
	T = T+1
	
print(V1)	
-- EXECUTION TIME:
0.575544
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
